# OpenCPN-tidal-current-grib-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: build_opencpn_plugin.md  copernicus_netcdf_setup.md  copernicus_provider.md  data_workflow_worldwide_beta.md  integration_testing.md  library_api_for_gui.md  marine_ie_provider.md  opencpn_compatibility.md  opencpn_plugin.md  opencpn_plugin_roadmap.md  plugin_roadmap.md  security_credentials.md  tpxo_pytmd_notes.md  tpxo_pytmd_setup.md
docs/opencpn-grib-pi-integration/: README.md  grib_pi_environmental_generator.patch  opencpn_branch_commits.txt
examples/: reference_points.example.csv
plugins/currentgrib_pi/: CMakeLists.txt  README.md
plugins/currentgrib_pi/data/: README.md  currentgrib_pi.xml
plugins/currentgrib_pi/src/: currentgrib_dialog.cpp  currentgrib_dialog.h  currentgrib_pi.cpp  currentgrib_pi.h
src/tidal_current_grib_generator/: __init__.py  api.py  cli.py  copernicus.py  dependencies.py  errors.py  geo.py  marine_ie.py  model.py  noaa.py  providers.py  reference.py  security.py  weather.py
src/tidal_current_grib_generator/grib/: __init__.py  merge.py  read.py  validation.py  writer.py
src/tidal_current_grib_generator/sources/: __init__.py  base.py  netcdf.py  pytmd.py  synthetic.py  tpxo_cache.py
tests/: test_cli.py  test_geo.py  test_grib_validation.py  test_model.py  test_netcdf_source.py  test_noaa.py  test_providers_api.py  test_reference.py  test_sources.py  test_tpxo_cache.py  test_tpxo_source.py  test_weather.py
