[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "tidal-current-grib-generator"
version = "0.1.0"
description = "Generate OpenCPN-compatible tidal/ocean-current GRIB files from model sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tidal-current-grib-generator contributors" }]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
grib = ["eccodes>=1.6"]
tpxo = [
  "pyTMD>=3.0",
  "xarray>=2024.7",
  "timescale>=0.0.6",
]
netcdf = [
  "xarray>=2024.7",
  "netCDF4>=1.6",
]
copernicus = [
  "copernicusmarine>=2.0",
]
dev = ["pytest>=7.4"]
all = [
  "eccodes>=1.6",
  "copernicusmarine>=2.0",
  "pyTMD>=3.0",
  "xarray>=2024.7",
  "netCDF4>=1.6",
  "timescale>=0.0.6",
]

[project.scripts]
tidal-current-grib = "tidal_current_grib_generator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
